tests/NormalTests/paczka1/fuzzy1/27547733.err
Error in line 1: xTc A918 27,2
Error in line 6: VTzxPQ A918 16,7
Error in line 25: A918 S986 27,3
Error in line 39: xTc A858 97,3
